src/test/deca/context/valid/provided/ContextSansObjet/PlusFloatFloat.deca
//Description :
//	Vérification contextuelle de l'opérateur + avec des variables float
//
//Résultats :
//	ok
{
    float x = 1.0;
    float y = 1.0+2.3;
    float z = x+y;
    y = x+y;
}