src/test/deca/context/invalid/ContextSansObjet/OperationsBooleennes/Gt_Int.deca
//Description:
//  Vérification contextuelle du type de sortie non int de >
//
//Résultat:
//  Erreur contextuelle
//  ligne 8 : type incompatible
{
    int x = 1>0;
}